Enhance documentation and clarify concepts in the Geometrical Model of Nature
- Added a layered penetration diagram to illustrate excitation interactions with structural layers.
- Revised explanations of coupling constants, charge magnitudes, and interaction signs for clarity.
- Updated the master equation of motion to emphasize receiver kinematics and superposition principles.
- Clarified the role of delay and emitter-only modulation in various scenarios, including orbital dynamics and perturbations.
- Streamlined discussions on van der Waals volumes, effective excluded volumes, and their implications in chemistry.
- Improved consistency in mathematical terminology and notation across the documentation.

--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Architrino.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Architrino.md
@@ -2,7 +2,7 @@
 
 An Architrino is a transceiver: it continuously emits potential wavefronts and also receives and responds to incoming wavefronts from other sources. The fundamental transmit operation of an Architrino is the continuous emission of a potential field. This process has the following key properties:
 
--   **Constant rate of shell emission:** Each Architrino emits expanding spherical shells (wavefronts) at a constant rate. The magnitude of the potential carried by each shell is modulated by the particle's speed.
+-   **Constant rate of shell emission:** Each Architrino emits expanding spherical shells (wavefronts) at a constant rate and constant per-shell amplitude (independent of speed).
 -   **Point of Emission:** The potential emerges at the Architrino's current location (radius = 0) at time $t=\text{now}$ as a spatial Dirac delta.
 -   **Spherical Expansion:** From its point of emission, the potential expands as a perfectly spherical shell.
 -   **Field Speed:** The radius of this shell grows at a constant rate, the field speed $v$.
@@ -82,21 +82,4 @@ The model places no inherent limit on the speed of an Architrino, $|\mathbf{v}_a
 
 It is important to distinguish this immediate relationship (between $t_{\text{now}}$ and $t_{\text{now}} + \Delta t$) from the possibility of an Architrino intersecting one of its own spherical shells emitted earlier in its path history. This is somewhat analogous to a speedboat passing its own wake, and later curving or stopping such that its past wake catches up and passes. These regimes control the structure and multiplicity of causal intersection times $\mathcal{C}_a(t)$ along worldlines (see Action and Interaction).
 
-#### **Velocity-Modulated Emission**
-While an Architrino is a constant rate emitter of potential per unit time, the strength of the impulse generated at any instant is modulated by its speed. The emission strength is inversely related to the particle's speed, being maximal for a stationary particle and decreasing as speed increases.
-
-To model this without singularities, we define the effective charge magnitude, $q_{\mathrm{eff}}$, using a dimensionless factor based on the ratio of the particle's speed to the field speed, $\beta(t_0) = |\mathbf{v}_a(t_0)|/v$. A simple, non-singular model is:
-$$
-q_{\mathrm{eff}}(t_0) = q\,f\!\big(\beta(t_0)\big) \;=\; q\,f\!\big(|\mathbf{v}_a(t_0)|\big)
-$$
-This modifies the governing equations. The source term in the conservation law becomes:
-$$
-\text{source} = q_{\mathrm{eff}}(t_0)\,\delta(t-t_0)\,\delta^{(3)}(\mathbf{s}-\mathbf{s}_0)
-$$
-Consequently, the density on the expanding sphere is also scaled by this factor:
-$$
-\rho(t,\mathbf{s}) = \frac{q_{\mathrm{eff}}(t_0)}{4\pi r^2}\,\delta\!\big(r - v\,\tau\big)\,H(\tau)
-$$
-
-Plain language: $q_{eff}$ acts like a dimmer switch—the faster the emitter is moving at emission time, the dimmer that particular shell is.
 
