--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -12,7 +12,6 @@ Geodesics and dynamics: The background is fixed (absolute time × Euclidean spac
 
 Symbols:
 -   $v=1$ (field speed by units), $\kappa>0$ (coupling), $\eta>0$ (shell thickness)
--   $f(\beta)$ (emitter-speed dimming factor; default $f(\beta)=1/(1+\beta)$ with $\beta=\|\mathbf{v}\|/v$, and $\beta=\|\mathbf{v}\|$ in $v=1$ units).
 -   $\epsilon>0$ (unit charge magnitude); Electrino $q=-\epsilon$, Positrino $q=+\epsilon$
 -   $\sigma_{q q'}=\mathrm{sign}(q\,q')\in\{+1,-1\}$
 -   $r=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0)\|$, $\;\hat{\mathbf{r}}=(\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0))/r$
@@ -34,7 +33,7 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
     $$
     The signed, purely radial contribution is
     $$
-    \mathbf{a}_{o'\leftarrow o}(t; t_0) = \kappa\,\sigma_{q_o q_{o'}}\,\frac{|q_o q_{o'}|}{r^2}\,f\!\big(\|\mathbf{v}_o(t_0)\|\big)\,\hat{\mathbf{r}}.
+    \mathbf{a}_{o'\leftarrow o}(t; t_0) = \kappa\,\sigma_{q_o q_{o'}}\,\frac{|q_o q_{o'}|}{r^2}\,\hat{\mathbf{r}}.
     \quad\text{(EOM)}
     $$
     No magnetic/right-hand-rule terms appear; there are no cross products or velocity-direction couplings—only radial action along $\hat{\mathbf{r}}$. The total acceleration superposes over all sources and causal times:
@@ -69,7 +68,7 @@ $$
 \qquad
 \frac{d}{dt}v_r \;=\; \mathbf{a}_{o'\leftarrow o}(t;t_0)\cdot \hat{\mathbf{r}}
 \;=\;
-\frac{\kappa\,\sigma_{q_o q_{o'}}\,|q_o q_{o'}|}{r^2}\,f\!\big(\|\mathbf{v}_o(t_0)\|\big).
+\frac{\kappa\,\sigma_{q_o q_{o'}}\,|q_o q_{o'}|}{r^2}.
 $$
 Thus the per-hit work rate is $\mathbf{a}\cdot\mathbf{v} = (\mathbf{a}\cdot\hat{\mathbf{r}})\,v_r$; there is no instantaneous work on the orthogonal component.
 
@@ -79,7 +78,7 @@ Radial motion and the $1/r^2$ factor (local trend):
 
 Path-history delay shifts both the causal root $t_0$ and $\hat{\mathbf{r}}$ over finite intervals, so these are local statements.
 
-Modeling note: We modulate only the emission amplitude by the source speed via $f(\lvert \mathbf{v}_o(t_0)\rvert)$ (default $f(\beta)=1/(1+\beta)$ with $\beta=\|\mathbf{v}\|$ since $v=1$; see 00.2.1.11). The receiver’s velocity does not further modulate the force magnitude; it influences the instantaneous power through $\mathbf{a}\cdot\mathbf{v} = |\mathbf{a}|\,v_r$ and the subsequent evolution of $r$.
+Modeling note: Emission cadence and per-wavefront amplitude are constant (no emitter-speed dimming). The receiver’s velocity does not further modulate the force magnitude; it influences the instantaneous power through $\mathbf{a}\cdot\mathbf{v} = |\mathbf{a}|\,v_r$ and the subsequent evolution of $r$.
 
 Plain language: split your velocity into along-the-line and sideways. A hit only changes the along-the-line piece right now; sideways motion continues. If you’re moving inward, the next pushes tend to be stronger (1/r²); outward, weaker.
 
@@ -96,9 +95,9 @@ while preserving total emission $q_{\text{eff}}$. This produces continuous-in-ti
     $$
     \Phi_{\text{net}} = \sum_{i} \Phi_i
     $$
-    The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting expanding spherical shells. Operationally, every Architrino is continuously immersed in the superposed sphere streams of all others (and, when kinematics permit, its own); tractability comes from treating each causal hit independently with $1/r^2$ distance weighting (and emitter-side speed modulation), which makes local sources dominate.
+    The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting expanding spherical shells. Operationally, every Architrino is continuously immersed in the superposed sphere streams of all others (and, when kinematics permit, its own); tractability comes from treating each causal hit independently with $1/r^2$ distance weighting, which makes local sources dominate.
 
--   **Velocity Dependence:** The dynamics are velocity-dependent. Architrinos are transceivers: they emit potential spheres at a constant cadence; only the per-wavefront amplitude is modulated by the emitter’s speed. The receiver’s speed does not change the instantaneous force magnitude; it affects only the work rate via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$. Self-interaction requires $|\mathbf{v}_a| > v$ at some emission times (super-field-speed), so the worldline outruns its recent shells; curvature alone is insufficient if $|\mathbf{v}_a|<v$ everywhere.
+-   **Velocity Dependence:** The dynamics are delayed-only and purely radial. Architrinos are transceivers: they emit potential spheres at a constant cadence and constant per-wavefront amplitude (no emitter-speed dimming). The receiver’s speed does not change the instantaneous force magnitude; it affects only the work rate via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$. Self-interaction requires $|\mathbf{v}_a| > v$ at some emission times (super-field-speed), so the worldline outruns its recent shells; curvature alone is insufficient if $|\mathbf{v}_a|<v$ everywhere.
 
 ### **Self-Interaction**
 
@@ -110,15 +109,12 @@ From the perspective of the receiving Architrino, the information carried by an 
 1.  The net strength of the potential at the point of intersection.
 2.  The unoriented line of action through its current position (i.e., one of the two open rays on that line); it does not know the orientation along that line.
 
-It does not have direct knowledge of the source's identity, distance, or velocity. Because the magnitude of an emission is modulated by the emitter's velocity, a single received potential could have multiple possible origins. For example, a weak negative potential consistent with a given line of action could be from a nearby, fast-moving Electrino or a distant, slow-moving one.
+It does not have direct knowledge of the source's identity, distance, or velocity. Consequently, a single received potential can have multiple possible origins. For example, a weak negative potential consistent with a given line of action could be produced by different configurations along that line at various distances.
 
 This creates a more profound ambiguity: the receiver cannot distinguish between a negative potential from an Electrino on one side and a positive potential from a Positrino on the opposite side. An acceleration *towards* a point along the line of action could be interpreted as attraction to a Positrino at that point, or as repulsion from an Electrino located at the diametrically
 opposite point on the same line.
 
 Rest-frame recast (useful inference device): Any single hit can be equivalently described with a stationary emitter (|v|=0) placed somewhere along the same unoriented line of action, with the emitter’s actual speed at emission absorbed into an effective amplitude q_eff and an adjusted emission time. This transformation preserves the receiver’s information content (magnitude and line only) and does not resolve the sign/side ambiguity; it merely trades unknown speed and distance for an equivalent static surrogate on one of the two open rays.
 
-Level-set relation (speed–distance tradeoff): For a fixed observed per-hit magnitude, the canonical law implies $a \propto f(\beta_{\text{em}})/r^2$, hence $r \propto \sqrt{\,f(\beta_{\text{em}})\,}$ with $\beta_{\text{em}}=\|\mathbf{v}_{\text{em}}\|/v$ (in $v=1$ units, $\beta_{\text{em}}=\|\mathbf{v}_{\text{em}}\|$). For a fixed observed magnitude A, the physically consistent $(r,\beta_{\text{em}})$
-   pairs satisfy $r \propto \sqrt{f(\beta_{\text{em}})}$, so faster emitters would have been closer along one of the two open rays. With the default $f(\beta)=1/(1+\beta)$ this reduces to $r \propto 1/\sqrt{\,1+\beta_{\text{em}}\,}$. A stationary surrogate can either keep $r$ and absorb speed into $q_{\mathrm{eff}}$, or
-   keep $q$ fixed and move to $r_{\mathrm{virtual}} = r/\sqrt{\,f(\beta_{\text{em}})\,}$.
 
 This ambiguity is compounded by superposition. The net potential at any instant is the sum of all intersecting expanding spherical shells. A measured potential along a single radial could be the result of a complex confluence of fields from many different emitters located along that line of action, arriving from both directions.
