--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
@@ -296,5 +296,52 @@ Method 3 — Event-driven radial-transport + per-hit EOM (current canonical)
 
 Plain language: Keep using the event-driven, radial-only method for dynamics, check it against the retarded integral to set the knobs, and bring out the PDE only when you need whole-field pictures or complex media.
 
+---
+
+# Layered penetration diagram (molecules → cores)
+
+A qualitative “onion” sketch to visualize which excitations typically penetrate which structural layers. This helps readers see what’s excluded and what isn’t.
+
+Legend: [+] passes, [~] depends (energy/frequency/geometry), [x] mostly blocked/strongly attenuated
+
+```
++===============================================================+
+| L4: Bulk molecular shell (solids/liquids; many-body opacity)  |
+|   Photons:        [~] (material window; optical opaque, IR/UV/X/γ vary)   |
+|   Neutrinos:      [+] (nearly transparent)                                 |
+|   Charged ±ε:     [x] (bind/deflect; do not traverse as free particles)    |
+|   Dark-matter-like neutral (hypothetical): [+] (very weak coupling)        |
++---------------------------------------------------------------+
+| L3: Atomic electron cloud (bound electrons)                    |
+|   Photons:        [~] (photoelectric/Compton; X/γ penetrate better)        |
+|   Neutrinos:      [+]                                                     |
+|   Charged ±ε:     [x] (Coulomb-coupled; captured/scattered)                |
+|   Dark-matter-like neutral: [+]                                           |
++---------------------------------------------------------------+
+| L2: Nuclear layer (nucleons; femtoscopic scale)                |
+|   Photons:        [~] (γ can interact; strong attenuation in bulk)         |
+|   Neutrinos:      [+] (weak interaction; mostly pass)                      |
+|   Charged ±ε:     [x] (excluded as free traversers)                        |
+|   Dark-matter-like neutral: [+]                                           |
++---------------------------------------------------------------+
+| L1: Noether Core shielding (triply nested binaries; shielded)  |
+|   Photons:        [x] (far-field cancels; no corridor capture)             |
+|   Neutrinos:      [~] (tiny axial coupling only)                           |
+|   Charged ±ε:     [x] (self/partner couplings dominate; no transit)        |
+|   Dark-matter-like neutral: [+] (by hypothesis: minimal coupling)          |
++---------------------------------------------------------------+
+| L0: Axial corridors / flux-tube loci (coherent geometry)       |
+|   Photons:        [+] (guided along corridor)                               |
+|   Neutrinos:      [~] (weak corridor coupling; alignment matters)           |
+|   Charged ±ε:     [x] (no cross-product forces; not a transit channel)      |
+|   Dark-matter-like neutral: [~] (minimal, geometry-dependent)               |
++===============================================================+
+```
+
+Notes (interpretation):
+- “Dark-matter-like neutral” denotes very weakly coupled, neutral meta-assemblies consistent with this framework; included here as a hypothesis for qualitative comparison.
+- Entries marked [~] depend on spectrum, thickness, coherence, and alignment (e.g., γ vs optical photons; corridor alignment for neutrinos).
+- The diagram is about penetration (transit). Local interactions, capture, or re-binding are separate processes governed by geometry and delay.
+
 
 
