--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.2 - Walkthrough Step 2 — Units and Constants.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.2 - Walkthrough Step 2 — Units and Constants.md
@@ -21,7 +21,7 @@ Detailed explanation (dynamical geometry):
 - Coupling constant ($\kappa>0$):
   - $\kappa$ sets the overall scale of per-hit acceleration. In the canonical law,
     $
-    \mathbf{a}_{o'\leftarrow o} = \kappa\,\sigma_{q_o q_{o'}}\,\dfrac{|q_o q_{o'}|}{r^2}\,f\!\big(|\mathbf{v}_o|\big)\,\hat{\mathbf{r}},
+    \mathbf{a}_{o'\leftarrow o} = \kappa\,\sigma_{q_o q_{o'}}\,\dfrac{|q_o q_{o'}|}{r^2}\,\hat{\mathbf{r}},
     $
     larger $\kappa$ uniformly strengthens every interaction.
   - Scaling insight: if you scale $\kappa\mapsto \alpha\kappa$ while keeping $(\epsilon,\eta)$ fixed, accelerations scale by $\alpha$. Characteristic assembly scales such as the minimal binary radius $d_0$ and period $t_0$ shift accordingly through the dynamical balance that defines them.
@@ -32,7 +32,7 @@ Detailed explanation (dynamical geometry):
 
 - Unit charge magnitude ($\epsilon>0$):
   - $\epsilon$ is the fundamental charge scale of an Architrino (Electrino $q=-\epsilon$, Positrino $q=+\epsilon$). In this framework $\epsilon$ is often identified with $|e|/6$, making quark charges integer multiples of $\epsilon$.
-  - Emission amplitude is modulated by the emitter’s speed (not cadence); $q$ itself is constant, while the effective per-hit amplitude inherits the emitter-speed factor. The receiver’s speed does not additionally modulate the force.
+  - Per-wavefront amplitude and emission cadence are constant (no emitter-speed dimming). The receiver’s speed does not additionally modulate the force magnitude.
 
 - Sign of interaction ($\sigma_{q q'}$):
   - $\sigma_{q q'}=\mathrm{sign}(q\,q')$ selects attraction vs repulsion while keeping the acceleration strictly collinear with $\hat{\mathbf{r}}$. Like-on-like (σ=+1) points along +$\hat{\mathbf{r}}$ (repulsion); unlike (σ=-1) points along -$\hat{\mathbf{r}}$ (attraction).
@@ -41,6 +41,6 @@ Detailed explanation (dynamical geometry):
   - $r=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0)\|$ is the separation between the receiver “now” and the source at its causal emission time. $\hat{\mathbf{r}}$ is the corresponding unit vector. All per-hit actions are purely radial along this line; no transverse/right-hand-rule terms appear.
 
 - Combined role in assembly scales:
-  - The trio $(\kappa,\epsilon,\eta)$, together with the $1/r^2$ law and emitter-side velocity modulation, determines emergent scales such as the smallest sustainable orbit $d_0$ and fastest natural frequency $2\pi/t_0$. Intuitively, stronger coupling (larger $\kappa\epsilon^2$) and thinner shells (smaller $\eta$) favor tighter, faster structures until self-interaction and delay balance inward trends.
+  - The trio $(\kappa,\epsilon,\eta)$, together with the $1/r^2$ law, determines emergent scales such as the smallest sustainable orbit $d_0$ and fastest natural frequency $2\pi/t_0$. Intuitively, stronger coupling (larger $\kappa\epsilon^2$) and thinner shells (smaller $\eta$) favor tighter, faster structures until self-interaction and delay balance inward trends.
 
 Plain language: We measure speeds in units where the field speed is one, use κ to set how hard every hit pushes, use η to slightly thicken the razor-thin shells so calculus works, and use ε as the basic unit of charge. The push is always straight along the line back to where the sphere was emitted; like charges push out, unlike pull in.
