--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.7 - Walkthrough Step 7 — Superposition and locality.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.7 - Walkthrough Step 7 — Superposition and locality.md
@@ -5,7 +5,7 @@ Existing text excerpt:
 >     $$
 >     \Phi_{\text{net}} = \sum_{i} \Phi_i
 >     $$
->     The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting expanding spherical shells. Operationally, every Architrino is continuously immersed in the superposed sphere streams of all others (and, when kinematics permit, its own); tractability comes from treating each causal hit independently with $1/r^2$ distance weighting (and emitter-side speed modulation), which makes local sources dominate.
+>     The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting expanding spherical shells. Operationally, every Architrino is continuously immersed in the superposed sphere streams of all others (and, when kinematics permit, its own); tractability comes from treating each causal hit independently with $1/r^2$ distance weighting, which makes local sources dominate.
 
 Detailed explanation (why near fields dominate):
 
