--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.2 - Analytic Baselines.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.2 - Analytic Baselines.md
@@ -12,7 +12,7 @@ Models:
   - Relative-coordinate reduction; central force on the separation vector; Kepler conics.
 
 Comparisons to canonical law:
-- Delay and emitter-only modulation break centrality and exact conservation of the Kepler invariants.
+- Delay breaks centrality and exact conservation of the Kepler invariants.
 - Small-β expansion (|v| ≪ 1): leading-order dynamics match the central baseline; corrections scale with β and curvature.
 
 Deliverables:
