--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.3.2 - Equal-Charge Symmetric Repulsion.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.3.2 - Equal-Charge Symmetric Repulsion.md
@@ -13,7 +13,7 @@ Baseline (central 1/r² reference):
 - Energy integral yields v(r) and t(r) in closed form; asymptotics v→√(2E) as r→∞ if E>0.
 
 Canonical delayed-law notes:
-- Delay introduces mild non-centrality if symmetry is perturbed; emitter-only dimming reduces per-hit amplitude as speeds rise, slightly tempering acceleration compared to the baseline.
+- Delay introduces mild non-centrality if symmetry is perturbed.
 
 Deliverables:
 - Closed-form central-model expressions for quick comparison.
