--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.3.3 - Small-Eccentricity Orbit — Kepler vs Delay.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.3.3 - Small-Eccentricity Orbit — Kepler vs Delay.md
@@ -6,7 +6,7 @@ Setup:
 
 Objectives:
 - Baseline orbital period, radius, and precession (Kepler: none).
-- Leading-order precession and energy drift induced by delay and emitter-only modulation.
+- Leading-order precession and energy drift induced by delay.
 
 Baseline (central 1/r² reference):
 - Kepler circular orbit: v² = K/r, ω² = K/r³, no per-orbit precession; small-e expansions known in closed form.
