--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -21,18 +21,14 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 
 ---
 
-## 2) Velocity-modulated emission: a built-in energy regulator
+## 2) Constant per-wavefront emission (no dimming)
 
 - What we assume:
-  - Emission cadence is constant; the effective per-wavefront amplitude is $q_{\mathrm{eff}}(t_0)=q\,f\!\big(\beta_{\text{source}}(t_0)\big)$ with $\beta_{\text{source}}=\|\mathbf{v}_{\text{source}}(t_0)\|/v$ (default $f(\beta)=1/(1+\beta)$).
-  - Canonical per-hit law:
-    $$
-    a_{o′\leftarrow o} \propto \sigma_{q_o q_{o′}}\,\frac{|q_o q_{o′}|}{r^2}\,f\!\big(\|\mathbf{v}_o\|\big)\,\hat{\mathbf{r}}.
-    $$
+  - Emission cadence and per-wavefront amplitude are constant.
 
 - Why it matters:
-  - Emission cadence never changes: Architrinos are transceivers and emit wavefronts at a constant rate. What changes with speed is only the per-wavefront amplitude (q_eff) on the emitter side. This modulation provides negative feedback that reduces runaway behavior, enables shielding in assemblies, and helps establish stable operating points. Receiver motion influences only instantaneous power via $\mathbf{F}\cdot\mathbf{v}$ through the radial component $v_r$.
-  - Energetics become tractable: with η-mollification ($\delta\to\delta_\eta$), you can define $\Phi_\eta$ and verify $\Delta E_k = -\,\Delta U$ on resolved intervals while still taking $\eta\to 0$ for sharp impulses.
+  - Simplifies calibration and emphasizes that stability and scale selection arise from delay and self-interaction, not from amplitude dimming. Receiver motion influences only instantaneous power via $\mathbf{F}\cdot\mathbf{v}$ through the radial component $v_r$.
+  - With η-mollification ($\delta\to\delta_\eta$), you can define $\Phi_\eta$ and verify $\Delta E_k = -\,\Delta U$ on resolved intervals while still taking $\eta\to 0$ for sharp impulses.
 
 ---
 
