--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -108,7 +108,7 @@ Canonical per-hit acceleration:
 $$
 a_{o′\leftarrow j}(t; t_0)
 = \kappa\,\sigma_{q_j q_{o′}}\,
-\frac{|q_j q_{o′}|}{r^2}\,f\!\big(\|\mathbf{v}_j(t_0)\|\big)\,\hat{\mathbf{r}}.
+\frac{|q_j q_{o′}|}{r^2}\,\hat{\mathbf{r}}.
 $$
 
 Total acceleration:
@@ -164,7 +164,7 @@ Plain language: With slightly thick shells, the usual “force is minus gradient
 - $\epsilon = |e|/6$ is the unit charge magnitude; Electrino $q=-\epsilon$, Positrino $q=+\epsilon$.
 - $\kappa>0$ universal coupling.
 - $\eta>0$ mollifier width (regularization parameter).
-- $q_{\mathrm{eff}}(t_0) = q\,f\!\big(\beta_{\text{source}}(t_0)\big)$ where $\beta_{\text{source}}(t_0)=\|\mathbf{v}_{\text{source}}(t_0)\|/v$ (in $v=1$ units, $\beta=\|\mathbf{v}\|$). Default $f(\beta)=1/(1+\beta)$. Receiver velocity affects only instantaneous power $\,\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
+- Emission cadence and per-wavefront amplitude are constant (no emitter-speed dimming). Receiver velocity affects only instantaneous power $\,\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
 - $r$, $\hat{\mathbf{r}}$ as above; $H$ is the Heaviside step function with $H(0)=0$.
 
 Plain language: Fix units so the field speed is one; use ε as the basic charge; faster motion dims only the emitter’s per-wavefront amplitude and response, not cadence.
@@ -184,7 +184,7 @@ Plain language: Fix units so the field speed is one; use ε as the basic charge;
 - After formal definitions, add a brief “Plain language” sentence.
 - Use consistent symbol set: $\mathcal{C}_j(t)$, $r$, $\hat{\mathbf{r}}$, $v$, $\epsilon$, $\kappa$.
 - Equation tags (optional): (CT) causal-time, (EOM) equation of motion, (REG) regularization, (ENER) energetics.
-- Phrase velocity effects as “per-wavefront amplitude modulated by the emitter’s speed; emission cadence is constant.”
+- Phrase velocity effects without emitter-speed dimming; emission cadence and per-wavefront amplitude are constant.
 - Notation for “now”: use $t_{\text{now}}$ for a fixed current evaluation time; use $t_{\text{obs}}$ for observation time. Avoid Tnow/`T_now`; keep $t$ as the running variable elsewhere.
 - Emitters/receivers are individual Architrinos; composite assemblies never emit or receive as wholes; their behavior emerges from constituent Architrinos.
 - On first occurrence in a doc: “We work in units with field speed v=1 unless stated otherwise.”
