--- a/Geometrical Model of Nature/20 - Informational Layer/20.7 - Mapping to Chemistry/20.7.0 Displacement.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.7 - Mapping to Chemistry/20.7.0 Displacement.md
@@ -1,163 +1,75 @@
-Perfect — let’s build that table!
 
-The **van der Waals volume** $V_{w}$ of a molecule is essentially the “hard-sphere” space it occupies, obtained by summing the volumes of its atoms (using tabulated van der Waals radii) and correcting for bond overlaps. Chemists often report values from Bondi’s classic data (1964) or later refinements.
 
-Here’s a table of approximate **van der Waals volumes** for some common molecules, sorted from smallest to larger. (Units: Å³ = cubic ångström, where $1 \,\text{Å}^3 = 10^{-24}\,\text{cm}^3$.)
+# Visualizing Volumes and Exclusion in the Universe
 
-| Molecule       | Formula | van der Waals Volume (Å³) |
-| -------------- | ------- | ------------------------- |
-| Helium         | He      | 27                        |
-| Neon           | Ne      | 45                        |
-| Hydrogen       | H₂      | 25                        |
-| Water          | H₂O     | 55                        |
-| Ammonia        | NH₃     | 58                        |
-| Methane        | CH₄     | 71                        |
-| Ethane         | C₂H₆    | 103                       |
-| Methanol       | CH₃OH   | 91                        |
-| Ethanol        | C₂H₅OH  | 118                       |
-| Carbon dioxide | CO₂     | 93                        |
-| Benzene        | C₆H₆    | 146                       |
-| Toluene        | C₇H₈    | 163                       |
-| Naphthalene    | C₁₀H₈   | 262                       |
+When chemists talk about the **van der Waals (VdW) volume** of a molecule, they mean the space excluded by its electron cloud — the “hard sphere” a molecule presents to its neighbors. This is estimated from atomic van der Waals radii (Bondi, 1964) and corrected for bond overlaps. For example:
+
+| Molecule    | Formula | VdW Volume (Å³) |
+| ----------- | ------- | --------------- |
+| Hydrogen    | H₂      | 25              |
+| Helium      | He      | 27              |
+| Water       | H₂O     | 55              |
+| Methane     | CH₄     | 71              |
+| Ethanol     | C₂H₅OH  | 118             |
+| Benzene     | C₆H₆    | 146             |
+| Naphthalene | C₁₀H₈   | 262             |
+
+*(1 Å³ = 10⁻²⁴ cm³)*
+
+This gives a **geometric baseline** for how much space a molecule excludes. But in real matter, things are more flexible.
 
 ---
 
-### Notes
+## Levels of Excluded Volume
 
-* These values come from **Bondi’s van der Waals radii** and computational chemistry datasets (Reid et al. 1987, Gavezzotti 1983, etc.).
-* For molecules, values differ slightly depending on whether they’re measured (from liquid densities) or calculated (from radii).
-* Water looks “small” — but its *partial molar volume in liquid water* is actually \~18 cm³/mol, quite a bit larger than 55 Å³ per molecule would suggest, because of hydrogen bonding and open packing.
+1. **Geometric VdW Volume (constant)**
 
----
+   * Fixed by tabulated radii.
+   * Methane, for instance, is \~71 Å³ regardless of conditions.
 
-### 1. **Definition Level: Geometric vs. Effective**
+2. **Effective Excluded Volume (variable)**
 
-* **Geometric van der Waals volume**
-  If you define it *purely from atomic radii* (Bondi radii, tabulated), then the van der Waals volume is considered a **fixed property of the molecule**.
+   * Neighboring molecules can compress, stretch, or reorganize electron density.
+   * Hydrogen bonding, solvation shells, or π–π stacking alter the apparent space occupied.
 
-  * It’s like saying: if atoms are spheres of fixed size, then methane is \~71 Å³ no matter what.
-  * In this strict sense, **it doesn’t change with T, P, or environment** — it’s a model parameter.
+3. **Macroscopic Boundaries (everyday examples)**
 
-* **Effective van der Waals / Excluded volume**
-  In real systems, the *space a molecule excludes others from* depends on conditions. Neighboring molecules can compress electron clouds, hydrogen bonding can open space, etc. This makes the **effective excluded volume** somewhat flexible.
+   * *Air–water boundary*: photons (visible light) mostly pass through, but molecules from one side can’t enter the other without surface disruption.
+   * *Air–skin boundary*: oxygen molecules don’t pass freely — they’re excluded by cellular membranes unless aided by proteins.
+   * *Metal–skin boundary*: copper atoms in a wire don’t diffuse into your body, but photons (infrared heat, visible light reflections) cross that boundary easily.
 
----
+4. **Temperature & Pressure Effects**
 
-### 2. **Temperature Effects**
-
-* Higher temperature → more vibrational and rotational motion → molecules explore larger average conformations.
-* For flexible molecules (like long hydrocarbons), the **average van der Waals volume can increase** with T because they adopt more extended conformations.
-* For rigid small molecules (like H₂O, CO₂), the intrinsic atomic radii don’t change much, but the *effective space they occupy in a liquid* (partial molar volume, packing) does increase with temperature, since liquids expand.
+   * Raising T: molecules vibrate more, structures loosen, apparent excluded volume rises.
+   * Raising P: electron clouds compress slightly, effective excluded volume shrinks.
 
 ---
 
-### 3. **Pressure Effects**
+## Who Can “Slip Between” Excluded Regions?
 
-* At very high pressure, electron clouds are compressed.
-* Effective radii shrink slightly (measured by X-ray diffraction in crystals under gigapascal pressures).
-* In liquids, increasing pressure reduces the free volume between molecules, so the **apparent excluded volume per molecule decreases**, even if the geometric van der Waals volume is “constant.”
+Think of maximally packed van der Waals volumes as a **molecular fortress**. Ordinary atoms are locked out — but not everything plays by those rules.
 
----
+* **Ordinary matter (atoms, electrons)**: Blocked. They *are* the walls.
+* **Photons**: Sometimes pass, sometimes absorbed.
 
-### 4. **Neighbor / Environment Effects**
-
-* **Hydrogen bonding (water, alcohols)** → opens up local structure, so molecules “occupy” more apparent space than their van der Waals radii suggest.
-* **Ionic solvation** → hydration shells mean ions effectively displace much more volume than their bare VdW size.
-* **π–π stacking (aromatics)** → molecules pack more tightly than spheres would predict, reducing effective excluded volume.
-
----
-
-### 5. **In Practice**
-
-Chemists often distinguish:
-
-* **van der Waals volume (constant)** → derived from tabulated radii.
-* **Partial molar volume (variable)** → depends on T, P, and composition; this is what you’d measure experimentally in solutions.
-* **Free volume (variable)** → governs diffusion and viscosity, strongly T- and P-dependent.
+  * Visible light moves through water and glass, but not metal.
+  * X-rays probe deep into flesh but are stopped by bone.
+  * Gamma rays cut through meters of concrete.
+* **Neutrinos**: Pass almost completely unhindered; light-years of lead would be needed to stop them.
+* **Dark matter candidates**: If WIMPs or axions exist, they would also pass through matter as though it weren’t there.
+* **Gravitons (hypothetical)**: like photons, but for gravity — unhindered.
+* **Spacetime itself**: Not excluded. Matter curves spacetime, but doesn’t block it. (mathematical, non-physical interpretation)
 
 ---
 
-✅ **So the short version:**
+## Big Picture
 
-* *Tabulated VdW volumes* are treated as constants.
-* *Effective volumes* (the actual displacement of space in real systems) **do change with temperature, pressure, and molecular environment**.
+* **At the molecular level**: van der Waals volume defines exclusion for atoms and molecules.
+* **At the material level**: boundaries (air–water, skin–air, skin–metal) are just large-scale manifestations of those exclusions.
+* **At the cosmic level**: photons, neutrinos, dark matter, and gravitational waves sail straight through, almost oblivious to the walls that matter erects.
 
----
-
-what types of other particles may interlope between maximally packed VdW regions? neutrinos? photons? dark matter? spacetime particles? Higgs? gluons? etc
-
-
-This is a fun “where do things fit?” type of question — you’re essentially asking: *if you take molecules packed together as tightly as van der Waals repulsion allows, what kinds of “other particles” could still pass through those regions of space?*
-
-Let’s break it down by type of particle or excitation, from everyday physics to more exotic:
+In other words, the van der Waals volume is a “no-go zone” only for **ordinary fermionic matter**. For most of the universe’s particles and fields, those barriers simply don’t exist.
 
 ---
 
-## 1. **Classical Chemistry/Physics Scale**
-
-* **Electrons** – No, because electron clouds *define* the van der Waals boundaries. Any overlap raises energy steeply (Pauli exclusion + Coulomb repulsion).
-* **Other atoms/molecules** – No, unless high pressure/energy forces them into overlap (like in shock compression or inside neutron stars).
-
-So at “normal” conditions, van der Waals volumes represent **impenetrable regions for ordinary matter.**
-
----
-
-## 2. **Photons (Light)**
-
-* Photons don’t have charge and don’t obey exclusion like fermions.
-* They **can pass through electron clouds** depending on their wavelength and the material’s transparency:
-
-  * Visible photons pass through transparent substances (like glass or water) without being absorbed strongly.
-  * X-rays pass through almost everything except very heavy nuclei (they probe electron density).
-  * Gamma rays penetrate deeply — they’re only absorbed probabilistically via scattering or nuclear interactions.
-
-So: **photons interlope freely, unless they resonate or scatter.**
-
----
-
-## 3. **Neutrinos**
-
-* Neutrinos interact only via the weak force. Their mean free path through matter is *enormous* (light-years of lead to stop them!).
-* They don’t “see” van der Waals exclusion at all.
-* So: **neutrinos pass straight through molecules, electron clouds, and nuclei essentially unhindered.**
-
----
-
-## 4. **Dark Matter (if it exists in WIMP form)**
-
-* Candidate dark matter particles (WIMPs, axions, etc.) interact very weakly with ordinary matter.
-* Like neutrinos, they would not notice van der Waals exclusion volumes.
-* Dark matter would just flow through.
-
----
-
-## 5. **Virtual Particles / Force Carriers**
-
-* **Photons (virtual, EM field)**: define the repulsion itself, so they’re already “in” the electron cloud structure.
-* **Gluons**: confined inside protons and neutrons, never free to wander between molecules.
-* **Higgs boson**: an excitation of the Higgs field — not something that diffuses between molecules in any practical sense.
-* **Gravitons (if they exist)**: like photons for gravity, would pass through unhindered.
-
----
-
-## 6. **Spacetime “Particles”**
-
-* If by “spacetime particles” you mean excitations of spacetime (like hypothetical gravitons), they too would **not be blocked** by van der Waals regions.
-* In general relativity, spacetime itself isn’t obstructed — the matter just curves it.
-
----
-
-### 🚦 Bottom Line
-
-* **Blocked**: ordinary fermionic matter (atoms, molecules, electrons).
-* **Pass through depending on energy**: photons (visible, X-rays, gamma).
-* **Essentially unaffected**: neutrinos, dark matter, gravitational waves, Higgs field excitations, gluons (confined inside hadrons).
-
----
-
-So the “excluded” van der Waals volume is really just excluded for **ordinary atoms and electrons**. For most of the universe’s particles (neutrinos, photons, dark matter, spacetime waves), those boundaries don’t exist at all.
-
----
-
-Would you like me to make a **diagram** showing “layers of penetrability” (like concentric shells: what gets blocked vs what passes through)? That might make this really intuitive.
-
+Would you like me to sketch a **layered diagram** — showing molecules as hard shells, then overlaying which particles (photons, neutrinos, dark matter, etc.) can penetrate each layer — so readers can literally *see* what’s excluded and what isn’t?
